experiment with switch to MR Jar